--- a/AriesAuthentication/.classpath
+++ b/AriesAuthentication/.classpath
@@ -34,5 +34,14 @@
 	<classpathentry kind="lib" path="jars/jersey-servlet-1.14.jar"/>
 	<classpathentry kind="lib" path="jars/jettison-1.1.jar"/>
 	<classpathentry kind="lib" path="jars/jsr311-api-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jars/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="jars/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="jars/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="jars/hibernate-commons-annotations-5.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="jars/hibernate-core-5.0.2.Final.jar"/>
+	<classpathentry kind="lib" path="jars/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="jars/jandex-1.2.2.Final.jar"/>
+	<classpathentry kind="lib" path="jars/javassist-3.18.1-GA.jar"/>
+	<classpathentry kind="lib" path="jars/jboss-logging-3.3.0.Final.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
